--- a/pom.xml
+++ b/pom.xml
@@ -137,14 +137,16 @@
                         <configuration>
                             <publisher>
                                 <contextUrl>{ARTIFACTORY_CONTEXT_URL}</contextUrl>
-                                <snapshotRepoKey>oss-snapshot-local</snapshotRepoKey>
+                                <snapshotRepoKey>libs-snapshot-local</snapshotRepoKey>
                                 <username>{ARTIFACTORY_USERNAME}</username>
                                 <password>{ARTIFACTORY_PASSWORD}</password>
                             </publisher>
                             <buildInfo>
+                                <buildName>{buildName}</buildName>
+                                <buildNumber>{buildNumber}</buildNumber>
                                 <buildUrl>{CI_BUILD_URL|BUILD_URL}</buildUrl>
                                 <buildNumber>{CI_BUILD_NUMBER|BUILD_NUMBER}</buildNumber>
-                                <agentName>{CI_NAME|Jenkins}</agentName>
+                                <agentName>{CI_NAME|teamcity}</agentName>
                                 <principal>{CI_COMMITTER_USERNAME|ARTIFACTORY_USERNAME}</principal>
                             </buildInfo>
                         </configuration>
