--- a/pom.xml
+++ b/pom.xml
@@ -126,13 +126,13 @@
             </plugin>
             <plugin>
                 <groupId>org.jfrog.buildinfo</groupId>
-                <artifactId>artifactory-maven-plugin</artifactId>
+                <artifactId>>build-info-extractor-maven3-plugin</artifactId>
                 <version>2.2.x-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <id>build-info</id>
                         <goals>
-                            <goal>publish</goal>
+                            <goal>extract-build-info</goal>
                         </goals>
                         <configuration>
                             <publisher>
