--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
             </plugin>
             <plugin>
                 <groupId>org.jfrog.buildinfo</groupId>
-                <artifactId>>build-info-extractor-maven3-plugin</artifactId>
+                <artifactId>build-info-extractor-maven3-plugin</artifactId>
                 <version>2.2.x-SNAPSHOT</version>
                 <executions>
                     <execution>
